<resources>
    <string name="app_name">Energy Meter Scanner</string>

    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="log_out">Log Out</string>
    <string name="history">History</string>
    <string name="value">Value</string>
    <string name="edit_snapshot">Edit Snapshot</string>
    <string name="new_snapshot">New Snapshot</string>
    <string name="save">Save</string>
    <string name="invalid_data">Invalid Data</string>
    <string name="delete">Delete</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="removed_x_items">Removed %s items</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="scan_error">Something went wrong</string>
    <string name="empty_jobs_message">Jobs list is empty. Do you want to create some?</string>
    <string name="attention">Attention!</string>
    <string name="api_key_not_found">API key not found</string>
    <string name="settings">Settings</string>
    <string name="user_created">User created</string>
    <string name="sign_up_error">Sign Up Error</string>
    <string name="sign_in_error">Log In Error</string>
    <string name="alarms">Alarms</string>
    <string name="location">Location</string>
    <string name="basic_setup">Basic Setup</string>
    <string name="save_images">Save Images</string>
    <string name="scan_tries">Scan Tries</string>
    <string name="image_compression_level">Image Compression Level</string>
    <string name="weather_prefs">Weather Prefs</string>
    <string name="track_outside_temp">Track Outside Temperature</string>
    <string name="jobs">Jobs</string>
    <string name="latest_shot">Latest Shot: </string>
    <string name="current_boiler_temp">Current Boiler Temperature</string>
    <string name="boiler_temp">Boiler Temperature</string>
    <string name="outside_temp">Outside Temperature</string>
    <string name="charts">Charts</string>
    <string name="positive_correction">Positive Correction</string>
    <string name="consumption">Consumption</string>
    <string name="t_label">Temperature °C</string>
    <string name="show_temperature">Show Temperature</string>
    <string name="empty_data">Empty Data</string>
    <string name="last_year">Last Year</string>
    <string name="period">Period</string>
    <string name="last_season">Last Season</string>
    <string name="export_to_csv">Export to CSV</string>
    <string name="file_saved">File Saved</string>
    <string name="io_error">IO Error</string>
    <string name="_items_selected">%s items selected</string>
    <string name="fixFirstFive">First 6 to 5 fix</string>
    <string name="discard">Discard</string>
    <string name="correction_threshold">Correction Threshold</string>
    <string name="go">Go</string>
    <string name="shot_timeout">Shot Timeout</string>
    <string name="run_on_startup">Run on Startup</string>
    <string name="all">All</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="wrong_email">Wrong Email</string>
    <string name="shouldnt_be_empty">Shouldn\'t be empty</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="items">%s items</string>

</resources>
