<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="ds.meterscanner.mvvm.viewmodel.DetailsViewModel"
            />
        <variable
            name="view"
            type="ds.meterscanner.mvvm.DetailsView"
            />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <include
            layout="@layout/toolbar"
            bind:viewModel="@{viewModel.toolbar}"
            />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    bind:imageUrl="@{viewModel.imageUrl}"
                    tools:src="@drawable/test_snapshot"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    bind:error="@{viewModel.valueErrorField}"

                    >

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/value"
                        android:inputType="numberDecimal"
                        android:onTextChanged="@{(t,p1,p2,p3)->viewModel.onValueChanged(t)}"
                        android:text="@={viewModel.valueField}"
                        />

                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Date"
                            android:inputType="datetime"
                            android:text="@={viewModel.dateField}"
                            bind:keyListener="@{null}"
                            />

                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="18dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:onClick="@{v->view.onDatePick()}"
                        android:padding="4dp"
                        app:srcCompat="@drawable/ic_action_calendar"


                        />
                </FrameLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/outside_temp"
                        android:inputType="numberSigned"
                        android:text="@={viewModel.outsideTemp}"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/boiler_temp"
                        android:inputType="numberSigned"
                        android:text="@={viewModel.boilerTemp}"
                        />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{v->view.onSave()}"
                    android:text="@string/save"
                    app:theme="@style/PrimaryButton"
                    />

            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>
